// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
<!DOCTYPE html>
<html x-key="h1lusJ" lang="en">
<head x-key="rn5gG3"></head>
<body x-key="plZclz">
  <div x-key="KvEtNC" x-text="1 + 3">4</div>
</body>
</html>
`;

exports[`all 2`] = `
<!DOCTYPE html>
<html x-key="h1lusJ" lang="en">
<head x-key="rn5gG3"></head>
<body x-key="plZclz">
  <div x-key="KvEtNC" x-text="1+3">4</div>
</body>
</html>
`;
